@@ -3499,6 +3499,9 @@ ImportViewPixelArea(ViewInfo *view,
 
   assert(view != (ViewInfo *) NULL);
   assert(source != (const unsigned char *) NULL);
+  assert(quantum_size > 0U);
+  assert((quantum_size <= 32U) || (quantum_size == 64U));
+  assert(((quantum_size > 0U) && (quantum_size <= 32U)) || (quantum_size == 64U));
   assert(((quantum_size > 0U) && (quantum_size <= 32U)) || (quantum_size == 64U));
   assert((options == (const ImportPixelAreaOptions *) NULL) ||
          (options->signature == MagickSignature));
